fixed text wrapping

--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -1,7 +1,4 @@
- body {
-        font-family: 'Lato', serif;
-		
- }
+
 
  p,a,h1,h2,h3,h4,div {
         font-family: 'Josefin Slab', serif;
